# libdotenvarus

./: .gitignore  LICENSE  README.md  dotenvarus.c  dotenvarus.h  meson.build
examples/: example.c
test/: test.c
